--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <div class="modal-content">
             <button class="close-btn" id="close-content-modal">&times;</button>
             <div class="modal-header">
-                <button id="back-to-list-btn">&larr; 목록으로</button>
+                <button id="back-to-list-btn">&larr;</button>
                 <h2 id="content-title"></h2>
             </div>
             <div id="content-body"></div>
