--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
         .modal-content { background-color: white; padding: 30px; border-radius: 8px; width: 90%; max-width: 600px; max-height: 80vh; overflow-y: auto; position: relative; }
         .close-btn { position: absolute; top: 10px; right: 15px; background: none; border: none; font-size: 24px; cursor: pointer; z-index: 10; }
         .hidden { display: none; }
-        .modal-header { display: flex; align-items: center; margin-bottom: 15px; gap: 15px; }
-        .modal-header h2 { margin: 0; flex-grow: 1; text-align: center; }
-        #back-to-list-btn { background: #eee; border: none; padding: 8px 12px; border-radius: 5px; cursor: pointer; font-size: 14px; }
+        .modal-header { display: flex; justify-content: center; align-items: center; margin-bottom: 15px; position: relative; }
+        .modal-header h2 { margin: 0; }
+        #back-to-list-btn { position: absolute; left: 0; top: 50%; transform: translateY(-50%); background: #eee; border: none; padding: 8px 12px; border-radius: 5px; cursor: pointer; font-size: 14px; }
         #back-to-list-btn:hover { background: #ddd; }
         #posts-list { list-style: none; padding: 0; }
         #posts-list li { padding: 12px; border-bottom: 1px solid #eee; cursor: pointer; transition: background-color 0.2s; }
